dask-gateway/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dask-gateway
  namespace: dask-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  # tls:
  # - hosts:
  #   - postgrest.domain.com
  #   - web.domain.com
  #   secretName: tls-postgrest-domain
  rules:
  - host: dask.domain.com
    http:
      paths:
      - backend:
          serviceName: traefik-dask-gateway
          servicePort: 80
